--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-Welcome to Shimingxiao's homapage!
-Feel free to bookmark this to keep an eye on my project updates
+title: Welcome to Shimingxiao's homapage!
+description: Feel free to bookmark this to keep an eye on my project updates
